# rsanim

./: Cargo.toml  Justfile  LICENSE  README.md
.github/workflows/: rust.yaml
examples/: bevy.rs  bevy_sm.rs
src/: animator.rs  lib.rs  plugin.rs  state_machine.rs
tests/: animator.rs  animator_error.rs  animator_new.rs  animator_parameters.rs  current_state.rs  example.rs  example_sm.rs  lib.rs  new.rs  parameters.rs  state.rs  state_machine.rs  state_machine_error.rs  state_machine_new.rs  state_machine_parameters.rs  state_machine_state.rs  transition.rs  transition_end_state.rs  transition_start_state.rs  transition_trigger.rs  trigger.rs
