[package]
name = "rsanim"
version = "0.3.0"
edition = "2021"
description = "A basic state machine for managing sprite animations"
repository = "https://github.com/ironpeak/rsanim"
authors = ["Hrafn Orri Hrafnkelsson <hrafnorri@bitcrow.net>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["gamedev", "animation", "bevy"]
categories = ["game-development"]

[[example]]
name = "bevy"
path = "examples/bevy.rs"

[[example]]
name = "bevy_sm"
path = "examples/bevy_sm.rs"

[dev-dependencies]
bevy = { version = "0.9.1" }
